cmake_minimum_required(VERSION 3.9.1)

####################################################################################################
####################################################################################################
####################################################################################################
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_FORCE_INLINES")

####################################################################################################
####################################################################################################
####################################################################################################
#c++ 11, always before project to avoid infinite loop
set (CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_COMPILER "/usr/bin/g++-7")

####################################################################################################
####################################################################################################
####################################################################################################
project(AlsaTest)

find_package(ALSA REQUIRED)

####################################################################################################
####################################################################################################
####################################################################################################
add_library(sound_interface LinuxSoundInterface.cpp)
target_link_libraries(sound_interface ${ALSA_LIBRARY})

add_library(tcp_listener TCPListener.cpp)
target_link_libraries(tcp_listener sound_interface)

####################################################################################################
####################################################################################################
####################################################################################################
add_executable(AlsaTest main.cpp)
target_link_libraries(AlsaTest sound_interface tcp_listener)
